[package]
name = "clinews"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = "fat"
debug = false
strip = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
newsapi = {version = "0.2.0", path = "./newsapi", features = ["async"]} 
tokio = { version = "1.28", features = ["full"] }
