[package]
name = "newsapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2.6.2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.95"
thiserror = "1.0.40"
